[package]
name = "netstack-lwip"
version = "0.3.4"
edition = "2024"
description = "A lightweight network stack that converts TUN interface packets to TCP streams and UDP packets, powered by lwIP"
license = "MIT"
repository = "https://github.com/nickcychen/netstack-lwip"
keywords = ["network", "lwip", "tun", "tcp", "udp"]
categories = ["network-programming"]
build = "build.rs"

[dependencies]
tokio = { version = "*", features = ["sync", "io-util", "net", "time", "rt", "rt-multi-thread"] }
futures = "*"
log = "*"
anyhow = "*"
bytes = "*"
thiserror = "*"

[build-dependencies]
cc = "*"
bindgen = "*"
